Fixed BSky image links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <style>
   .wrapper {
-    max-width: 50%;
+    max-width: 60%;
     padding-right: 30px;
     padding-left: 30px;
   }
@@ -26,7 +26,7 @@ layout: default
           <a href="https://www.computationalnetworkscience.org/">Computational Network Science Group</a> 
           and guest researcher at University of Amsterdam as part of 
           <a href="http://www.planetworks.nl">PLANET-NL research group</a>. 
-          My research centers around analyzing complex network dynamics in social networks. I'm also an Open Knowledge Foundation Network member 
+          My research centers around analyzing complex network dynamics in social networks. I'm also an Open Knowledge Foundation Network member.
         </p>
       </div>
 
@@ -59,6 +59,8 @@ layout: default
           mode="light"
           limit="5"
           load-more="true"
+          custom-styles="img { display: none !important; }"
+
         >
         </bsky-embed>
       </div>
