--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
         <a class="page-link" href="/research/">Research</a>
         <a class="page-link" href="/generative/">Generative Art</a>
         <a class="page-link" href="/blog/">Blog</a>
+        <a class="page-link" href="/contact/">Contact</a>
       </div>
     </nav>
   </div>
