--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: default
 <style>
   .wrapper {
     max-width: 60%;
+    max-width: 1000px;
     padding-right: 30px;
     padding-left: 30px;
   }
@@ -13,6 +14,19 @@ layout: default
     border-radius: 4px;
     padding: 15px;
     margin: 20px 0;
+  }
+  @media screen and (max-width: 800px) {
+    .wrapper {
+      max-width: 100%;
+      padding-right: 15px;
+      padding-left: 15px;
+    }
+    .content-wrapper {
+      flex-direction: column !important;
+    }
+    .sidebar {
+      max-width: 100% !important;
+    }
   }
 </style>
 <div class="home">
@@ -60,7 +74,6 @@ layout: default
           limit="5"
           load-more="true"
           custom-styles="img { display: none !important; }"
-
         >
         </bsky-embed>
       </div>
