--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@
       <div class="trigger">
         <a class="page-link" href="/about/">About</a>
         <a class="page-link" href="/research/">Research</a>
-        <a class="page-link" href="/generative/">Generative Art</a>
-        <a class="page-link" href="/blog/">Blog</a>
+        <!-- <a class="page-link" href="/generative/">Generative Art</a> -->
+        <!-- <a class="page-link" href="/blog/">Blog</a> -->
         <a class="page-link" href="/contact/">Contact</a>
       </div>
     </nav>
