--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,8 +33,8 @@ layout: default
   <div class="content-wrapper" style="display: flex; gap: 2rem;">
     <div class="main-content" style="flex: 2;">
       {{ content }}
-      
-      <div>
+      <div class="intro-box">
+        <img src="assets/Como picture - Cropped.jpg" alt="Profile picture" style="width: 100%; height: auto; border-radius: 4px; margin-bottom: 15px;">
         <p>
           Hi! I'm a PhD candidate in complex networks at Leiden University 
           <a href="https://www.computationalnetworkscience.org/">Computational Network Science Group</a> 
