--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@ layout: default
       <div style="transform: scale(0.8); transform-origin: top left;">
         <script type="module" src="https://cdn.jsdelivr.net/npm/bsky-embed/dist/bsky-embed.es.js" async></script>
         <bsky-embed
-          username="g-adel.bsky.social"
+          username="gamal-adel.bsky.social"
           mode="light"
           limit="5"
           load-more="true"
