--- a/_layouts/generative-project.html
+++ b/_layouts/generative-project.html
@@ -20,7 +20,7 @@ layout: golden
         <video src="{{ file_url }}" controls autoplay loop muted playsinline style="max-width: 100%; height: auto; margin-bottom: 2rem; margin-left: auto; margin-right: auto; display: block;">
         Your browser does not support the video tag.
         </video>
-        <p style="text-align: center; opacity: 0.8; font-size: 0.9rem;">{{ file_name }}</p>
+        <!-- <p style="text-align: center; opacity: 0.8; font-size: 0.9rem;">{{ file_name }}</p> -->
       </div>
       {% else %}
       <div class="gallery-item" style="text-align: center;">
