--- a/_includes/golden-header.html
+++ b/_includes/golden-header.html
@@ -1,13 +1,12 @@
 <div class="golden-header">
-<h1 class="golden-header-title" style="font-size: 2.2rem; font-weight: bold; color: black;"><a href="/" style="text-decoration: none; color: inherit;">Gamal Adel</a></h1>
+  <h1 class="golden-header-title" style="font-size: 2.0em;"><a href="/">Gamal Adel</a></h1>
 
-
-  <nav class="golden-nav" style="justify-content: center;">
+  <nav class="golden-nav">
     <!-- <a href="/">Home</a> -->
     <!-- <a href="/research/">Research</a>
     <a href="/projects/">Projects</a> -->
-    <a href="/about/">About</a>
-    <a href="/contact/">Contact</a>
+    <!-- <a href="/about/">About</a>
+    <a href="/contact/">Contact</a> -->
   </nav>
   
   <div class="golden-social">
