More generative outputs

--- a/_layouts/golden.html
+++ b/_layouts/golden.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ page.title | escape }}</title>
+  <title>Gamal Adel - {{ page.title | escape }}</title>
   <link rel="icon" href="{{ '/assets/logo_processed_3_transparent.ico' | relative_url }}" media="(prefers-color-scheme: light)">
   <link rel="icon" href="{{ '/assets/logo_processed_3_inverted_transparent.ico' | relative_url }}" media="(prefers-color-scheme: dark)">
   <style>
     {% if page.color_mode == 'dark' %}
-      {% assign bg_main_val = '#111111' %}
+      {% assign bg_main_val = '#000000' %}
       {% assign text_main_val = '#f9f9f9' %}
     {% else %}
       {% assign bg_main_val = '#f9f9f9' %}
